@@ -13,13 +13,15 @@ import com.rtsbuilding.rtsbuilding.server.storage.session.RtsStorageSession;
 import com.rtsbuilding.rtsbuilding.server.workflow.core.RtsWorkflowEngine;
 import com.rtsbuilding.rtsbuilding.server.workflow.model.RtsWorkflowStatus;
 import com.rtsbuilding.rtsbuilding.server.workflow.model.RtsWorkflowType;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.network.chat.Component;
-import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.item.ItemStack;
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.text.TextComponentString;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -43,7 +45,7 @@ public final class RtsPlacementService {
     /**
      * 放置选中方块——通过 PLACE_SINGLE / QUICK_BUILD 管道执行。
      */
-    public static void placeSelected(ServerPlayer player, BlockPos clickedPos, Direction face, double hitX, double hitY,
+    public static void placeSelected(EntityPlayerMP player, BlockPos clickedPos, EnumFacing face, double hitX, double hitY,
             double hitZ, byte rotateSteps, boolean forcePlace, boolean skipIfOccupied, String itemId,
             ItemStack itemPrototype, double rayOriginX, double rayOriginY, double rayOriginZ,
             double rayDirX, double rayDirY, double rayDirZ, boolean quickBuild, boolean forceEmptyHand) {
@@ -55,7 +57,9 @@ public final class RtsPlacementService {
         if (player != null && session != null && !forceEmptyHand) {
             PipelineRegistry.execute(quickBuild ? RtsWorkflowType.QUICK_BUILD : RtsWorkflowType.PLACE_SINGLE,
                     PlaceContext.builder(player)
-                            .clickedPositions(clickedPos == null ? List.of() : List.of(clickedPos))
+                            .clickedPositions(clickedPos == null
+                                    ? Collections.<BlockPos>emptyList()
+                                    : Collections.singletonList(clickedPos))
                             .face(face)
                             .hitOffsetX(hitOffsetX)
                             .hitOffsetY(hitOffsetY)
@@ -83,7 +87,7 @@ public final class RtsPlacementService {
         RtsPlacementBatch.enqueuePlaceBatch(
                 player,
                 session,
-                clickedPos == null ? List.of() : List.of(clickedPos),
+                clickedPos == null ? Collections.<BlockPos>emptyList() : Collections.singletonList(clickedPos),
                 face,
                 hitOffsetX,
                 hitOffsetY,
@@ -109,7 +113,7 @@ public final class RtsPlacementService {
     /**
      * 批量方块放置入队——通过 PLACE_BATCH 管道执行。
      */
-    public static void enqueuePlaceBatch(ServerPlayer player, List<BlockPos> clickedPositions, Direction face,
+    public static void enqueuePlaceBatch(EntityPlayerMP player, List<BlockPos> clickedPositions, EnumFacing face,
             double hitOffsetX, double hitOffsetY, double hitOffsetZ, byte rotateSteps,
             boolean forcePlace, boolean skipIfOccupied, String itemId,
             ItemStack itemPrototype, double rayOriginX, double rayOriginY, double rayOriginZ,
@@ -120,7 +124,7 @@ public final class RtsPlacementService {
             List<BlockPos> sanitized = new ArrayList<>(Math.min(clickedPositions.size(), C2SRtsPlaceBatchPayload.MAX_POSITIONS));
             for (BlockPos pos : clickedPositions) {
                 if (pos != null && RtsLinkedStorageResolver.canAccessWorldTarget(player, pos)) {
-                    sanitized.add(pos.immutable());
+                    sanitized.add(pos.toImmutable());
                     if (sanitized.size() >= C2SRtsPlaceBatchPayload.MAX_POSITIONS) {
                         break;
                     }
@@ -185,7 +189,7 @@ public final class RtsPlacementService {
     /**
      * 提交挂起放置作业——尝试恢复所有因物品不足而暂停的放置任务。
      */
-    public static int submitPendingPlacement(ServerPlayer player) {
+    public static int submitPendingPlacement(EntityPlayerMP player) {
         if (player == null) {
             return 0;
         }
@@ -195,11 +199,11 @@ public final class RtsPlacementService {
         }
         int count = RtsPendingPlacementService.resumeAllPendingJobs(player, session);
         if (count > 0) {
-            player.displayClientMessage(
-                    Component.literal("Resumed " + count + " pending placement job(s)."), true);
+            player.sendStatusMessage(
+                    new TextComponentString("Resumed " + count + " pending placement job(s)."), true);
         } else {
-            player.displayClientMessage(
-                    Component.literal("No pending placements can be resumed — insufficient items."), true);
+            player.sendStatusMessage(
+                    new TextComponentString("No pending placements can be resumed — insufficient items."), true);
         }
         return count;
     }
@@ -207,17 +211,17 @@ public final class RtsPlacementService {
     /**
      * 旋转已放置的方块。
      */
-    public static void rotateBlock(ServerPlayer player, BlockPos pos) {
+    public static void rotateBlock(EntityPlayerMP player, BlockPos pos) {
         if (!canRotateBlock(player, pos)) {
             return;
         }
-        RtsPlacementHelper.rotatePlacedBlock(player.serverLevel(), pos, (byte) 1);
+        RtsPlacementHelper.rotatePlacedBlock(player.getServerWorld(), pos, (byte) 1);
     }
 
     public static void rotateBlockStep(
-            ServerPlayer player,
+            EntityPlayerMP player,
             BlockPos pos,
-            Direction axisDirection,
+            EnumFacing axisDirection,
             int quarterTurns) {
         if (!canRotateBlock(player, pos)
                 || axisDirection == null
@@ -225,13 +229,13 @@ public final class RtsPlacementService {
             return;
         }
         RtsPlacementHelper.rotatePlacedBlockStep(
-                player.serverLevel(),
+                player.getServerWorld(),
                 pos,
                 axisDirection,
                 quarterTurns);
     }
 
-    private static boolean canRotateBlock(ServerPlayer player, BlockPos pos) {
+    private static boolean canRotateBlock(EntityPlayerMP player, BlockPos pos) {
         if (player == null || pos == null
                 || !RtsProgressionManager.canUse(player, RtsFeature.ROTATE_BLOCK)) {
             return false;
@@ -240,12 +244,12 @@ public final class RtsPlacementService {
         if (session == null
                 || session.mode != com.rtsbuilding.rtsbuilding.common.build.BuilderMode.ROTATE
                 || player.isSpectator()
-                || !player.mayBuild()
+                || !player.capabilities.allowEdit
                 || !RtsLinkedStorageResolver.canAccessWorldTarget(player, pos)) {
             return false;
         }
         if (!RtsClaimProtectionService.canInteractBlock(
-                player, pos, Direction.UP, net.minecraft.world.InteractionHand.MAIN_HAND, ItemStack.EMPTY)) {
+                player, pos, EnumFacing.UP, EnumHand.MAIN_HAND, ItemStack.EMPTY)) {
             return false;
         }
         return true;
@@ -258,8 +262,8 @@ public final class RtsPlacementService {
     /**
      * 获取当前批量范围放置的总方块数。
      */
-    public static int getPlaceBatchTotalBlocks(ServerPlayer player) {
-        var engine = RtsWorkflowEngine.getInstance();
+    public static int getPlaceBatchTotalBlocks(EntityPlayerMP player) {
+        RtsWorkflowEngine engine = RtsWorkflowEngine.getInstance();
         return engine.getAllProgress(player).stream()
                 .filter(d -> d.type() == RtsWorkflowType.PLACE_BATCH || d.type() == RtsWorkflowType.QUICK_BUILD)
                 .mapToInt(RtsWorkflowStatus::totalBlocks)
@@ -269,8 +273,8 @@ public final class RtsPlacementService {
     /**
      * 获取当前批量范围放置的已放置方块数量。
      */
-    public static int getPlaceBatchCompletedBlocks(ServerPlayer player) {
-        var engine = RtsWorkflowEngine.getInstance();
+    public static int getPlaceBatchCompletedBlocks(EntityPlayerMP player) {
+        RtsWorkflowEngine engine = RtsWorkflowEngine.getInstance();
         return engine.getAllProgress(player).stream()
                 .filter(d -> d.type() == RtsWorkflowType.PLACE_BATCH || d.type() == RtsWorkflowType.QUICK_BUILD)
                 .mapToInt(RtsWorkflowStatus::completedBlocks)
@@ -280,8 +284,8 @@ public final class RtsPlacementService {
     /**
      * 获取当前批量范围放置的未放置方块数。
      */
-    public static int getPlaceBatchRemainingBlocks(ServerPlayer player) {
-        var engine = RtsWorkflowEngine.getInstance();
+    public static int getPlaceBatchRemainingBlocks(EntityPlayerMP player) {
+        RtsWorkflowEngine engine = RtsWorkflowEngine.getInstance();
         return engine.getAllProgress(player).stream()
                 .filter(d -> d.type() == RtsWorkflowType.PLACE_BATCH || d.type() == RtsWorkflowType.QUICK_BUILD)
                 .mapToInt(RtsWorkflowStatus::remainingBlocks)
@@ -291,7 +295,7 @@ public final class RtsPlacementService {
     /**
      * 获取当前批量范围放置的方块类型（物品 ID）。
      */
-    public static String getPlaceBatchItemId(ServerPlayer player) {
+    public static String getPlaceBatchItemId(EntityPlayerMP player) {
         if (player == null) return "";
         return com.rtsbuilding.rtsbuilding.server.task.RtsTaskEngine.INSTANCE
                 .firstPlacementItemId(player);
